# llama-cpp

./: Cargo.toml  README.md  plugin.toml
.github/workflows/: release.yml
scripts/: release-local.sh
src/: lib.rs  tool_dispatch.rs  tool_spec.rs
src/llama_cpp/: activation.rs  backend.rs  config.rs  embedding.rs  generation.rs  inference.rs  mod.rs  steer.rs
