[package]
name = "llama-cpp-plugin"
version = "0.1.0"
edition = "2021"
publish = false

# Standalone workspace — fully decoupled from any parent so the plugin's
# llama-cpp-4 + llama-cpp-sys-4 + minijinja deps don't unify against the
# host's. The host crate (remotemedia-core) used to gate this whole node
# family behind a `llama-cpp` feature flag that pulled in llama-cpp-sys-4
# (a ~200 MiB CUDA-linked C build). Lifting the family out into this
# Path-3 plugin lets the host stay slim while consumers who want
# in-process GGUF inference opt-in via the loadable .so.
[workspace]

[profile.release]
opt-level = 3
lto = "thin"
debug = 0

[profile.dev]
opt-level = 1
debug = 1
incremental = true

[lib]
name = "llama_cpp_plugin"
crate-type = ["cdylib"]

# Path-3 hand-rolled plugin: depends ONLY on the skinny
# `remotemedia-plugin-sdk` umbrella plus the heavy llama-cpp /
# minijinja stack pinned directly. Does NOT link `remotemedia-core`.
[dependencies]
remotemedia-plugin-sdk = { git = "https://github.com/RemoteMedia-SDK/remotemedia-sdk.git", branch = "main" }
abi_stable = "0.11"

async-trait = "0.1"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
bytemuck = { version = "1.14", features = ["derive"] }
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros", "time"] }
tracing = "0.1"

# Match the host workspace pin (=0.2.13) for behavioural parity. The
# CUDA execution backend is always on for the plugin — consumers
# building on machines without the CUDA toolkit will need to either
# disable `cuda` here or have CUDA available at link time (see README).
llama-cpp-4 = { version = "0.2.13", features = ["cuda"] }
llama-cpp-sys-4 = { version = "0.2", features = ["cuda"] }
encoding_rs = "0.8"
minijinja = { version = "2", default-features = false, features = [
    "builtins",
    "loader",
    "macros",
    "multi_template",
    "loop_controls",
    "json",
] }
minijinja-contrib = { version = "2", default-features = false, features = ["pycompat"] }
