[package]
name = "llama-cpp-plugin"
version = "0.2.0"
edition = "2021"
publish = false

# Standalone workspace — fully decoupled from any parent so the plugin's
# llama-cpp-4 + llama-cpp-sys-4 + minijinja deps don't unify against the
# host's. The host crate (remotemedia-core) used to gate this whole node
# family behind a `llama-cpp` feature flag that pulled in llama-cpp-sys-4
# (a ~200 MiB CUDA-linked C build). Lifting the family out into this
# Path-3 plugin lets the host stay slim while consumers who want
# in-process GGUF inference opt-in via the loadable .so.
[workspace]

[profile.release]
opt-level = 3
lto = "thin"
debug = 0

[profile.dev]
opt-level = 1
debug = 1
incremental = true

[lib]
name = "llama_cpp_plugin"
# cdylib: matrix-built `.so` for dlopen. rlib: in-process linking
# for consumers like examples/qwen-s2s-avatar-plugins.
crate-type = ["cdylib", "rlib"]

# `plugin-export` (default on) gates the `abi_stable` root-module
# symbol for dlopen. Disable when linking multiple plugins as rlibs
# in one binary (symbol collision).
[features]
default = ["plugin-export"]
plugin-export = []

# Path-3 hand-rolled plugin: depends ONLY on the skinny
# `remotemedia-plugin-sdk` umbrella plus the heavy llama-cpp /
# minijinja stack pinned directly. Does NOT link `remotemedia-core`.
[dependencies]
remotemedia-plugin-sdk = { git = "https://github.com/RemoteMedia-SDK/remotemedia-sdk.git", rev = "5dd1bc9980eafa51bac188279bb0d29a2bdaba34" }
abi_stable = "0.11"

async-trait = "0.1"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
bytemuck = { version = "1.14", features = ["derive"] }
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros", "time"] }
tracing = "0.1"

# Pinned ahead of the host workspace (host is at =0.2.13) to pull in
# Qwen3.6 MTP (multi-token prediction) support. MTP was upstreamed into
# llama.cpp in llama-cpp-rs v0.2.56 (PR ggml-org/llama.cpp#22673) and
# the API was finalized in v0.3.0 (`MtpSession`, `LlamaContextType::Mtp`,
# `LlamaContextParams::with_ctx_type`). The CUDA execution backend is
# always on for the plugin — consumers building on machines without the
# CUDA toolkit will need to either disable `cuda` here or have CUDA
# available at link time (see README).
llama-cpp-4 = { version = "0.3.0", features = ["cuda"] }
llama-cpp-sys-4 = { version = "0.3", features = ["cuda"] }
encoding_rs = "0.8"
minijinja = { version = "2", default-features = false, features = [
    "builtins",
    "loader",
    "macros",
    "multi_template",
    "loop_controls",
    "json",
] }
minijinja-contrib = { version = "2", default-features = false, features = ["pycompat"] }

[patch."https://github.com/RemoteMedia-SDK/remotemedia-sdk.git"]
remotemedia-plugin-sdk = { path = "../remotemedia-plugin-sdk/crates/plugin-sdk" }
remotemedia-traits = { path = "../remotemedia-plugin-sdk/crates/traits" }
remotemedia-types = { path = "../remotemedia-plugin-sdk/crates/types" }
loadable-node-abi = { path = "../remotemedia-plugin-sdk/crates/loadable-node-abi" }

